(executable
 (name main)
 (public_name main)
 (modules main View)
 (libraries caqti-driver-postgresql dream)
 (preprocess
  (pps lwt_ppx)))

(rule
 (targets View.ml)
 (deps View.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))

(env
 (dev
  (flags
   (:standard -w -27))))

(data_only_dirs _esy esy.lock)
